--- a/data_pipeline/deployment/Dockerfile
+++ b/data_pipeline/deployment/Dockerfile
@@ -9,14 +9,21 @@ RUN pip install -r requirements.txt
 
 FROM python:3.9-slim
 
+# RUN apt-get update && \
+#   apt-get install -y --no-install-recommends \
+#     openjdk-11-jre-headless && \
+#   apt-get autoremove -yqq --purge && \
+#   apt-get clean && \
+#   rm -rf /var/lib/apt/lists/*
 RUN apt-get update && \
-  apt-get install -y --no-install-recommends \
-    openjdk-11-jre-headless && \
-  apt-get autoremove -yqq --purge && \
-  apt-get clean && \
-  rm -rf /var/lib/apt/lists/*
+    apt-get install -y --no-install-recommends \
+    openjdk-17-jre-headless && \
+    apt-get autoremove -yqq --purge && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-ENV JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
+
+ENV JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
 
 COPY --from=build /opt/venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
