--- a/monitoring_service/deployment/requirements.txt
+++ b/monitoring_service/deployment/requirements.txt
@@ -1,6 +1,8 @@
 evidently==0.1.57.dev0
 fastparquet==0.8.3
-Flask==2.2.2
+Flask
 pandas==1.4.4
 prometheus_client==0.14.1
 python-dotenv==0.21.0
+Werkzeug
+numpy==1.26.4
