--- a/training_pipeline/deployment/requirements.txt
+++ b/training_pipeline/deployment/requirements.txt
@@ -1,6 +1,6 @@
-fastparquet==0.8.3
-feast[redis]==0.24.0
-mlflow==1.29.0
-pandas==1.4.4
+fastparquet
+feast[redis]
+mlflow
+pandas
 pyspark==3.0.1
-scikit-learn==1.1.2
+scikit-learn
