print(xinchao) data_source/feature_repo/ data_pipeline

--- a/stream_emitting/Dockerfile
+++ b/stream_emitting/Dockerfile
@@ -5,9 +5,11 @@ COPY stream_emitting.py stream_emitting.py
 COPY data/driver_stats_stream.parquet data/driver_stats_stream.parquet
 COPY dev_requirements.txt requirements.txt
 
-# install dependencies
-RUN pip3 install -r requirements.txt
-
+# # install dependencies
+# RUN pip install -r requirements.txt
+# Install dependencies
+RUN echo "Đang cài đặt các thư viện từ requirements.txt" && \
+    pip install -r requirements.txt
 CMD python stream_emitting.py \
     --bootstrap_servers ${BOOTSTRAP_SERVERS} \
     --data ${DATA}
