--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,14 @@ jobs:
       options: --user=root
 
     steps:
+      - name: Cache Python packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install Python 3.9 and Docker
         run: |
           apt-get update
@@ -68,3 +76,17 @@ jobs:
         working-directory: data_pipeline
         run: |
           make deploy_dags
+
+  deploy_model_training:
+    needs: setup_environment
+    runs-on: ubuntu-latest
+    container:
+      image: ubuntu:20.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Deploy model training
+        working-directory: training_pipeline
+        run: |
+          make build_image
