--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,5 +1,6 @@
 name: Data Pipeline Workflow
 
+# Sự kiện kích hoạt workflow khi có push hoặc pull request vào branch chính
 on:
   push:
     branches:
@@ -11,39 +12,38 @@ on:
 jobs:
   setup_environment:
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:20.04
-      options: --user=root
-
-    steps:
-      - name: Cache Python packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install Python 3.9 and Docker
-        run: |
-          apt-get update
-          apt-get install -y python3.9 python3.9-distutils python3-pip apt-transport-https ca-certificates curl software-properties-common
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-          add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
-          apt-get update
-          apt-get install -y docker-ce docker-ce-cli containerd.io
-          python3.9 -m pip install --upgrade pip
-          ln -sf /usr/bin/python3.9 /usr/bin/python
-
-  build_data_pipeline:
-    needs: setup_environment
-    runs-on: ubuntu-latest
-    container:
-      image: ubuntu:20.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /var/lib/docker
+          key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+
+      - name: Set up Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+          sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+          sudo systemctl start docker
+          sudo systemctl enable docker
+
+  build_data_pipeline:
+    needs: setup_environment
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Build data pipeline
         working-directory: data_pipeline
         run: |
@@ -53,12 +53,11 @@ jobs:
   test_data_pipeline:
     needs: setup_environment
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:20.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Test data pipeline
         run: |
           echo "Testing data pipeline.."
@@ -66,27 +65,12 @@ jobs:
   deploy_data_pipeline:
     needs: setup_environment
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:20.04
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Deploy data pipeline
         working-directory: data_pipeline
         run: |
           make deploy_dags
-
-  deploy_model_training:
-    needs: setup_environment
-    runs-on: ubuntu-latest
-    container:
-      image: ubuntu:20.04
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Deploy model training
-        working-directory: training_pipeline
-        run: |
-          make build_image
