build_image training_pipeline

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -74,3 +74,15 @@ jobs:
         working-directory: data_pipeline
         run: |
           make deploy_dags
+  build_training_pipeline:
+    needs: setup_environment
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Build training pipeline
+        working-directory: training_pipeline
+        run: |
+          make build_image
