--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,42 @@
+# name: Data Pipeline Workflow
+
+# # Sự kiện kích hoạt workflow khi có push hoặc pull request vào branch chính
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
+
+# jobs:
+#   setup_environment:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Cache Docker layers
+#         uses: actions/cache@v2
+#         with:
+#           path: /var/lib/docker
+#           key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
+#           restore-keys: |
+#             ${{ runner.os }}-docker-
+
+#       - name: Set up Docker
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+#           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+#           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
+#           sudo apt-get update
+#           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+#           sudo systemctl start docker
+#           sudo systemctl enable docker
 name: Data Pipeline Workflow
 
-# Sự kiện kích hoạt workflow khi có push hoặc pull request vào branch chính
 on:
   push:
     branches:
@@ -20,10 +56,15 @@ jobs:
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
-          path: /var/lib/docker
+          path: /tmp/.docker
           key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
           restore-keys: |
             ${{ runner.os }}-docker-
+
+      - name: Enable Docker BuildKit
+        run: |
+          echo '{"experimental": true, "features": {"buildkit": true}}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
 
       - name: Set up Docker
         run: |
@@ -35,6 +76,16 @@ jobs:
           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           sudo systemctl start docker
           sudo systemctl enable docker
+
+      - name: Cache Python packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+  # Các job khác như build, test, deploy...
 
   build_data_pipeline:
     needs: setup_environment
