--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,46 +1,10 @@
-# name: Data Pipeline Workflow
-
-# # Sự kiện kích hoạt workflow khi có push hoặc pull request vào branch chính
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches:
-#       - main
-
-# jobs:
-#   setup_environment:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-
-#       - name: Cache Docker layers
-#         uses: actions/cache@v2
-#         with:
-#           path: /var/lib/docker
-#           key: ${{ runner.os }}-docker-${{ hashFiles('**/Dockerfile') }}
-#           restore-keys: |
-#             ${{ runner.os }}-docker-
-
-#       - name: Set up Docker
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-#           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-#           sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
-#           sudo apt-get update
-#           sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-#           sudo systemctl start docker
-#           sudo systemctl enable docker
 name: Data Pipeline Workflow
 
 on:
   push:
     branches:
       - main
+      - data_pipeline
   pull_request:
     branches:
       - main
@@ -85,7 +49,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-  # Các job khác như build, test, deploy...
 
   build_data_pipeline:
     needs: setup_environment
