--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,31 +51,30 @@ jobs:
             ${{ runner.os }}-pip-
 
 
-    build_data_pipeline:
-      needs: setup_environment
-      runs-on: ubuntu-latest
+  build_data_pipeline:
+    needs: setup_environment
+    runs-on: ubuntu-latest
 
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-        - name: Build data pipeline
-          working-directory: data_pipeline/deployment  # Chỉ định thư mục chứa Dockerfile
-          run: |
-            echo "Building data pipeline.."
-            docker build -t duynope1803/data-pipeline:latest .  # Dockerfile sẽ được tìm thấy trong thư mục này
+      - name: Build data pipeline
+        working-directory: data_pipeline/deployment
+        run: |
+          echo "Building data pipeline.."
+          make build_image
 
-        - name: Log in to Docker Hub
-          uses: docker/login-action@v2
-          with:
-            username: duynope1803  # Sử dụng tên đăng nhập Docker Hub của bạn
-            password: ${{ secrets.DOCKER_PASSWORD }}  # Lấy token từ GitHub Secrets
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: duynope1803  # Sử dụng tên đăng nhập Docker Hub của bạn
+          password: ${{ secrets.DOCKER_PASSWORD }}  # Lấy token từ GitHub Secrets
 
-        - name: Build and push Docker image to Docker Hub
-          run: |
-            docker build -t duynope1803/data-pipeline:latest .
-            docker push duynope1803/data-pipeline:latest
-
+      - name: Build and push Docker image to Docker Hub
+        run: |
+          docker build -t duynope1803/data-pipeline:latest .
+          docker push duynope1803/data-pipeline:latest
 
 
   test_data_pipeline:
