--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,22 +60,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build data pipeline
-        working-directory: data_pipeline/deployment
+        working-directory: data_pipeline
         run: |
           echo "Building data pipeline.."
           make build_image
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: duynope1803  # Sử dụng tên đăng nhập Docker Hub của bạn
-          password: ${{ secrets.DOCKER_PASSWORD }}  # Lấy token từ GitHub Secrets
-
-      - name: Build and push Docker image to Docker Hub
-        run: |
-          docker build -t duynope1803/data-pipeline:latest .
-          docker push duynope1803/data-pipeline:latest
-
 
   test_data_pipeline:
     needs: setup_environment
